@@ -14,6 +14,7 @@ v9.2.0
 - WL#16381: Add support for read and write timeouts
 - WL#16285: Remake Multi Statement Execution
 - BUG#37145655: MySQL Connector/Python Configuration Files RCE
+- BUG#36702939: connection_cext has a memory leak in the python mysql-connector
 - BUG#36922645: Option `connection_timeout` is overwritten and works as "query" timeout instead
 - BUG#36126909: "Unread result found" exception/bad MySQLCursor.statement when query text contains code comments
 - BUG#35810050: Executing multiple statements fails when importing Sakila
